Fixed some layout issues

--- a/src/main/components/mainPage/mainPage.scss
+++ b/src/main/components/mainPage/mainPage.scss
@@ -89,7 +89,7 @@ p {
 .heading {
   font-weight: 100;
   font-size: 50px;
-  line-height: 68px;
+  line-height: 50px;
 }
 
 .heading + .paragraph {
